# libsev

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  travis.yml
addtl/: atomic_mutex.h  concurrent_bucket_map.h  ring_buffer.h  shared_singleton.h
libsev/: CMakeLists.txt  i_stream_reader.cpp  i_stream_reader.h  i_stream_reader.inl  i_stream_writer.cpp  i_stream_writer.h  i_stream_writer.inl
nonstd/: README.md  atomic_mutex.h  atomic_shared_mutex.h  inplace_function.h  platform_win32.h  ring_buffer.h  shared_singleton.h
old_addtl/: README.md  atomic_shared_mutex.h  inplace_function.h  platform_win32.h  ring_buffer.h
old_sev/: event_function.cpp  event_function.h  event_loop.cpp  exception.cpp  main_event_loop.cpp  main_event_loop.h  win32_exception.cpp
old_sev/_trash/: i_stream_writer.h  i_stream_writer.inl
old_sev/impl/: crc32_brumme.cpp  crc32_brumme.h  platform_win32.h
sev/: CMakeLists.txt  atomic.h  atomic_lock.h  atomic_mutex.h  atomic_rw_lock.h  atomic_shared_mutex.h  concurrent_functor_queue.cpp  concurrent_functor_queue.h  config.h  crc32.cpp  crc32.h  event_flag.cpp  event_flag.h  event_function.h  event_loop.cpp  event_loop.h  event_loop_impl.h  event_wait_handle.cpp  event_wait_handle.h  exception.cpp  exception.h  functor.cpp  functor.h  functor_view.h  functor_vt.h  i_stream.h  i_stream_reader.cpp  i_stream_reader.h  i_stream_reader.inl  i_stream_writer.cpp  i_stream_writer.h  i_stream_writer.inl  main_event_loop.cpp  main_event_loop.h  platform.h  ring_buffer.h  self_config.h  shared_singleton.h  win32_exception.cpp  win32_exception.h
sev/_trash/: i_stream_reader.cpp  i_stream_reader.inl
sev/impl/: platform_win32.h
sev_lite/: CMakeLists.txt  LICENSE  event_loop.h  test.cpp
sev_static/: CMakeLists.txt
templates/: class.cpp  class.h  create_class.py  license.txt
test_001_dev/: CMakeLists.txt  main.cpp
test_002_dyn/: CMakeLists.txt  main.cpp
test_003_fqmt/: CMakeLists.txt  main.cpp
test_dev/: CMakeLists.txt  main.cpp
test_dyn/: CMakeLists.txt  main.cpp
